# code-mode-utcp

./: README.md
code-mode-mcp/: README.md  index.ts  package-lock.json  package.json
code-mode-mcp/scripts/: dev-register.mjs  dev-unregister.mjs
python-library/: README.md  pyproject.toml
python-library/src/utcp_code_mode/: code_mode_utcp_client.py
python-library/tests/: test_code_mode_utcp_client.py
typescript-library/: package-lock.json  package.json
typescript-library/src/: code_mode_utcp_client.ts
typescript-library/tests/: code_mode_utcp_client.test.ts
