[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code-mode"
version = "1.1.0"
authors = [
  { name = "UTCP Contributors" },
]
description = "Code execution mode for UTCP - enables executing Python code chains with tool access."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "utcp>=1.1.2",
    "typing-extensions>=4.0",
    "RestrictedPython>=6.0"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MPL-2.0"

[project.optional-dependencies]
dev = [
    "build",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "coverage",
    "twine",
]

[project.urls]
Homepage = "https://utcp.io"
Source = "https://github.com/universal-tool-calling-protocol/python-utcp"
Issues = "https://github.com/universal-tool-calling-protocol/python-utcp/issues"
